--- a/finalPrjAm/src/main/resources/application-test.properties
+++ b/finalPrjAm/src/main/resources/application-test.properties
@@ -1,7 +1,8 @@
 server.port=8111
 
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/kh_final_prj_am?userUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/kh_final_prj_test?userUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=0114
 
