--- a/finalPrjAm/src/main/resources/application.properties
+++ b/finalPrjAm/src/main/resources/application.properties
@@ -15,3 +15,4 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.devtools.livereload.enabled=true
+springboot.jwt.secret=cji0114!@#
